# onnx-predict-yolov8

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: main.py
opyv8/: model.py  predictor.py  utils.py
src/: model.py  predictor.py
src/opyv8/: __init__.py  model.py  predictor.py  utils.py
